k8s_yml/deployment_mysql_hostpath.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
        region: india
    spec:
      volumes:
        - name: mysql-storage
          hostPath:
              path: /home/sql
      containers:
        - name: mysql
          image: mysql:5.7
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
