k8s_yml/deployment_word.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
        region : india
    spec:
      volumes:
        - name: storage_name
          hostPath:
              path: /home/test
      containers:
      - env:
        - name  : WORDPRESS_DB_HOST
          value : mysql
        - namee : WORDPRESS_DB_USER
          value : priyanshu
        - name  : WORDPRESS_DB_PASSWORD
          value : root
        - name  : WORDPRESS_TABLE_PREFIX
          value : wp_    
      - name: wordpress
        image: wordpress:5.1.1-php7.3
        ports:
        - containerPort: 80
        volumeMounts:
        - name: storage_name
          mountPath: /var/www/html
