k8s_yml/mysql-hostpath.yaml
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mysql
  name: mysql
spec:
      volumes:
        - name: mysql-storage
          hostPath:
              path: /home/sql
      containers:
        - name: mysql
          image: mysql:5.7
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
