k8s_yml/mysql-pvc-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mysql
  name: mysql
spec:
      volumes:
      - name: mypd #we can give multiple volumes
        persistentVolumeClaim:
          claimName: mypriyanshu #pvc name 
      containers:
        - name: mysql
          image: mysql:5.7
          volumeMounts:
            - name: mypd
              mountPath: /var/lib/mysql
