k8s_yml/mysql.yaml
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: mysql
  name: mysql
spec:
      containers:
        - name: mysql
          image: mysql:5.7
