k8s_yml/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-04-29T07:16:09Z"
  labels:
    run: webos
  name: webos
  namespace: default
  resourceVersion: "13916"
  uid: dc2a66ac-1131-4ea4-9311-2402ef3613c6
spec:
  clusterIP: 10.103.152.135
  clusterIPs:
  - 10.103.152.135
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31700
    port: 40
    protocol: TCP
    targetPort: 40
  selector:
    run: webos
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
