k8s_yml/custom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    #annotation used to define rewrite rule so ingrees only match rule in his space and then send update url to svc
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec:
  rules:
    - host: www.priyanshu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: web2
                port:
                  number: 8080
