k8s_yml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name : myingress  
  labels:
    name: myrules
spec:
    rules:
    - host:  www.priyanshu.com
      http:   
        paths:
        - path: /nginx
          pathType: Prefix
          backend:
            service:
              name: nginx-deployment
              port: 
                  number: 80
        - path: /apache
          pathType: Prefix
          backend:
            service:
              name: apache
              port: 
                  number: 80
